--- a/partenaires.html
+++ b/partenaires.html
@@ -219,7 +219,7 @@ box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px
       <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
         <div class="card-garage">
           <div class="card-image-garage">
-            <a href="https://www.citroen.fr/accueil.html" target="_blank">
+            <a href="https://www.psa-retail.com/fr/citroen/rennes/" target="_blank">
               <img src="images/citroen.jpg" height="100px">
             </a>
           </div>
@@ -418,7 +418,7 @@ box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
       <div class="card-image-garage">
-      <a href="https://concessions.peugeot.fr/sourget" target="_blank">
+      <a href="https://www.psa-retail.com/fr/peugeot/rennes/psa-retail-cesson-sevigne/" target="_blank">
       <img src="images/peugeot.jpg" height="100px">
       </a>
       </div>
@@ -618,7 +618,7 @@ box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
       <div class="card-image-garage">
-      <a href="https://www.dsautomobiles.fr/accueil.html" target="_blank">
+      <a href="https://concessionnaire.dsautomobiles.fr/ds-store-rennes" target="_blank">
       <img src="images/ds.jpg" height="100px">
       </a>
       </div>
